<resources>
    <string name="app_name">Bouquet</string>
    <string name="map_api_key">AIzaSyArjmbYWTWZhDFFtPOLRLKYwjtBDkOEGrY</string>
    <string name="code">code</string>
    <string name="sign_up2">Create Account</string>
    <string name="login">Login</string>
    <string name="skip">Skip</string>
    <string name="user_name">User name</string>
    <string name="user_password">password</string>
    <string name="user_email">Email</string>
    <string name="user_phone">Phone</string>
    <string name="register">Register</string>
    <string name="si_su">Sign in or create a new account .</string>
    <string name="new_user">Create new Account .</string>
    <string name="home">Home</string>
    <string name="Shops">Stores</string>
    <string name="department">Departments</string>
    <string name="Offers">Offers</string>
    <string name="Occasions">Occasions</string>
    <string name="more">More</string>
    <string name="store_name">Store Name</string>
    <string name="the_name_of_the_bouquet">The name of the bouquet</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="field_req">Field required</string>
    <string name="wait">Wait...</string>
    <string name="failed">Failed</string>
    <string name="something">Something went haywire</string>
    <string name="inc_phone_pas">phone or Password InCorrect</string>
    <string name="inc_phone">phone  InCorrect</string>
    <string name="inc_pass">Password InCorrect</string>
    <string name="user_not_found">This User Not Register</string>
    <string name="notifications">notifications</string>
    <string name="my_profile">My Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="language_setting">Language Setting</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="contact_us">Contact Us</string>
    <string name="register_as_a_company">Register as a store</string>
    <string name="logout">Logout</string>
    <string name="ryal">Ryaal</string>
    <string name="bouquet">bouquet</string>
    <string name="about_hand_break">About App</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="cancel">cancel</string>
    <string name="market_phone">Market Phone</string>
    <string name="my_orders">My Orders</string>
    <string name="products">Products</string>
    <string name="subject">subject</string>
    <string name="message">message</string>
    <string name="send">send</string>
    <string name="add_details">Add Details</string>
    <string name="a_word_of_congratulations">A word of congratulations</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="Empty_Cart_First">Empty Cart First</string>
    <string name="cart">Cart</string>
    <string name="select_language">select_language</string>
    <string name="select">select</string>
    <string name="select_type">select type</string>
    <string name="defaults">Default</string>
    <string name="Ocasion">Ocasion</string>
    <string name="complete">Complete Order</string>
    <string name="you_can_now_add_an_occasion_to_your_event">You can now add an occasion to your event</string>
    <string name="ocasion_name">OCasion Name</string>
    <string name="date_of_ocasion">Date of Ocasion</string>
    <string name="address">Address</string>
    <string name="select_location_on_map">select location on map</string>
    <string name="inv_email">Invalid email address</string>
    <string name="suc">Success !</string>
    <string name="bank_accounts">Bank Accounts</string>
    <string name="bank_name">Bank name</string>
    <string name="account_iban">Account IBAN</string>
    <string name="account_number">Account Number</string>
    <string name="account_name">Account Name</string>
    <string name="bank_account">Bank Account</string>
    <string name="not_avail">Not available now</string>
    <string name="services">Services</string>
    <string name="add_to_cart_suc">Add To Cart Succes</string>
    <string name="shop_profile">Market</string>
    <string name="product_detials">Product Detials</string>
    <string name="save">Save</string>
    <string name="perm_image_denied">Permision Images Deined</string>
    <string name="no_prouduct_found">No Prouduct Found</string>
    <string name="no_offer_found">No Offer Found</string>
    <string name="no_departments_found">No Departments Found</string>
    <string name="no_ocassions_found">No Ocassions Found</string>
    <string name="no_orders_found">No Orders Found</string>
    <string name="no_market_found">No Market Found</string>
    <string name="connect">Connecting</string>
    <string name="Search">Search</string>
<string name="Market_Location">Market Location</string>
    <string name="verfication_code">Verfication Code</string>
    <string name="a_message_will_appear_on_your_phone_by_barely_waiting_your_seconds">A message will appear on your phone by barely waiting your seconds</string>
    <string name="confirm">confirm</string>
    <string name="image">Image</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="change">Change</string>
    <string name="user_exit_or_might_be_marketer">User Exists Or Might Be Marketer</string>
    <string name="favourites">Favourites</string>
</resources>
