<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="5dp"
        android:text="@string/notifications"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp"

        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="20dp"
        android:background="@color/black" />

    <TextView
        android:id="@+id/tv_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/si_su"
        android:textColor="@color/colorPrimary"
        android:textSize="17sp"
        android:textStyle="bold"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:weightSum="3"

        >

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:textColor="@color/colorPrimary"

            android:text="@string/login"
            android:textSize="14sp"
            android:textStyle="bold"


            />

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="0dp"
            android:layout_height="40dp"

            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="@string/sign_up2"
            android:textColor="@color/colorPrimary"
            android:textSize="13sp"
            />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="40dp"

            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            />

    </LinearLayout>

</LinearLayout>