<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginBottom="5dp"
    android:layout_marginTop="5dp"

>

            <ImageView
                android:id="@+id/im1"
                android:layout_width="70dp"
                android:layout_height="70dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />


            <TextView
                android:id="@+id/tv1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/im1"
                android:textColor="@color/black"
                android:text="@string/store_name"
                android:layout_marginTop="5dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:gravity="start"
app:layout_constraintHorizontal_weight="1"
                />


    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv1"
        android:textColor="@color/colorPrimary"
        android:text="@string/store_name"
        android:layout_marginTop="5dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:gravity="start"
app:layout_constraintHorizontal_weight="1"
        />






            <TextView
                android:id="@+id/tv4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv1"
                app:layout_constraintEnd_toStartOf="@id/im1"
                android:textColor="@color/black"
                android:text="@string/quantity"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:layout_marginTop="5dp"

                />
    <TextView
        android:id="@+id/tv_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        app:layout_constraintEnd_toStartOf="@id/tv4"
        android:textColor="@color/colorPrimary"
        android:text="@string/store_name"
        android:layout_marginTop="5dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:gravity="start"
        app:layout_constraintHorizontal_weight="1"
        />



        </androidx.constraintlayout.widget.ConstraintLayout>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
    <Button
        android:id="@+id/btn_detilas"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:text="@string/add_details"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/btn_login_bg"
        android:layout_marginBottom="8dp"
        android:layout_weight=".5"
android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:singleLine="true"/>
    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/btn_login_bg"
        android:layout_marginBottom="8dp"
        android:layout_weight=".5"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:singleLine="true"
        />
</LinearLayout>

</LinearLayout>


