<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="5dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="5dp"
android:clickable="false"
android:longClickable="false"
    android:focusable="false"
    android:focusableInTouchMode="false"
    android:background="@color/white">

    <ImageView
        android:id="@+id/im1"
        android:layout_width="90dp"
        android:layout_height="90dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="centerCrop"
        tools:ignore="RtlCompat" />


    <TextView
        android:id="@+id/tv1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="start"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/store_name"
        android:textColor="@color/gray4"
        app:layout_constraintStart_toEndOf="@id/im1"
        app:layout_constraintTop_toTopOf="parent"

        />


    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="start"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/store_name"
        android:textColor="@color/colorPrimary"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/tv1"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/quantity"
        android:textColor="@color/gray4"
        app:layout_constraintStart_toEndOf="@id/im1"
        app:layout_constraintTop_toBottomOf="@id/tv1"
        android:layout_marginTop="5dp"
        />

    <TextView
        android:id="@+id/tv_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="start"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/store_name"
        android:textColor="@color/colorPrimary"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/tv4"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <TextView
        android:id="@+id/tv_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="start"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:text="@string/store_name"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toEndOf="@+id/im1"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toBottomOf="@+id/tv4" />


        <Button
            android:id="@+id/btn_detilas"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginBottom="8dp"
            android:layout_weight=".5"
            android:background="@drawable/btn_login_bg"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/add_details"
            android:textColor="@color/white"
            android:layout_marginEnd="8dp"
            android:visibility="gone"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintEnd_toStartOf="@+id/btn_cancel"
            app:layout_constraintTop_toBottomOf="@+id/im1"
            tools:ignore="RtlCompat" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginBottom="8dp"
            android:layout_weight=".5"
            android:background="@drawable/btn_login_bg"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:layout_marginEnd="20dp"
            android:visibility="gone"
            app:layout_constraintHorizontal_weight="1"
            android:text="@string/cancel"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/im1"
            tools:ignore="RtlCompat" />

</androidx.constraintlayout.widget.ConstraintLayout>




